# RayTracer

./: .gitignore  CMakeLists.txt  Helpers.h  NeededMath.h  OBJloader.h  README.md  geometry.h  main.cpp
